--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -47,7 +47,24 @@
         <div class="content-wrap">
         <h2>Software Experience</h2>
           <section>
-            <table class="software">
+            <div class="flex-soft">
+              <div class=flex-soft-item>Java</div>
+              <div class=flex-soft-item>C</div>
+              <div class=flex-soft-item>C#</div>
+              <div class=flex-soft-item>Netbeans</div>
+              <div class=flex-soft-item>Eclipse</div>
+              <div class=flex-soft-item>Visual Studio</div>
+              <div class=flex-soft-item>Android Studio</div>
+              <div class=flex-soft-item>XCode</div>
+              <div class=flex-soft-item>Windows</div>
+              <div class=flex-soft-item>Linux</div>
+              <div class=flex-soft-item>Google Firebase</div>
+              <div class=flex-soft-item>Microsoft Office</div>
+              <div class=flex-soft-item>HTML</div>
+              <div class=flex-soft-item>CSS</div>
+              <div class=flex-soft-item>Javascript</div>
+            </div>
+            <!-- <table class="software">
               <tr>
                 <td>Java</td>
                 <td>C</td>
@@ -73,7 +90,7 @@
                 <td>CSS</td>
                 <td>Javascript</td>
               </tr>
-            </table>
+            </table> -->
           </section>
           <p><a href="#header">Back to top</a></p>
         </div>
