--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -17,7 +17,6 @@
         <div class="content-wrap">
           <h1>Christopher Atchison</h1>
           <h2>Software Engineer</h2>
-          <p>Experienced Software Engineer with a demonstrated history of working in the Enterprise Software field. Skilled in Java, C/C#, Android and iOS Development as well as HTML/CSS/Javascript. Strong engineering professional with a Bachelor of Science in Computer Science from University of South Florida. </p>
           </div>
       </header>
 
@@ -28,8 +27,15 @@
         <div class=flex-nav-item id="workBtn">Employment</div>
         <div class=flex-nav-item id="projBtn">Projects</div>
         <a href="#contact" class=flex-nav-item>Contact</a>
-        <!-- <div class=flex-nav-item id="contactsBtn">Contact</div> -->
       </div>
+
+      <!--*******************  Summary  *************************************-->
+      <section class="summary" id=summary>
+      <div class="content-wrap">
+          <h2>Summary</h2>
+          <p>Experienced Software Engineer with a demonstrated history of working in the Enterprise Software field. Skilled in Java, C/C#, Android and iOS Development as well as HTML/CSS/Javascript. Strong engineering professional with a Bachelor of Science in Computer Science from University of South Florida. </p>
+      </div>
+      </section>
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education" id=edu>
         <div class="content-wrap">
@@ -38,7 +44,6 @@
             <h3>University of South Florida - Tampa</h3>
             <p>Bachelor of Science, <i>cum laude</i>, in Computer Science</p>
           </section>
-          <p><a href="#header">Back to top</a></p>
         </div>
       </section> <!-- End of School block. -->
 
@@ -64,33 +69,6 @@
               <div class=flex-soft-item>CSS</div>
               <div class=flex-soft-item>Javascript</div>
             </div>
-            <!-- <table class="software">
-              <tr>
-                <td>Java</td>
-                <td>C</td>
-                <td>C#</td>
-              </tr>
-              <tr>
-                <td>Netbeans</td>
-                <td>Eclipse</td>
-                <td>Visual Studio</td>
-              </tr>
-              <tr>
-                <td>Android Studio</td>
-                <td>XCode</td>
-                <td>Windows</td>
-              </tr>
-              <tr>
-                <td>Linux</td>
-                <td>Google Firebase</td>
-                <td>Microsoft Office</td>
-              </tr>
-              <tr>
-                <td>HTML</td>
-                <td>CSS</td>
-                <td>Javascript</td>
-              </tr>
-            </table> -->
           </section>
           <p><a href="#header">Back to top</a></p>
         </div>
