--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -50,7 +50,7 @@
       <!-- ********************  SOFTWARE EXPERIENCE  ********************* -->
       <section class="software-experience" id=soft>
         <div class="content-wrap">
-        <h2>Software Experience</h2>
+        <h2 class="soft-title">Software Experience</h2>
           <section>
             <div class="flex-soft">
               <div class=flex-soft-item>Java</div>
@@ -127,7 +127,7 @@
             <p>Phone applications were by far our most requested feature. It was used by volunteers who might not be in the station, or battalion chiefs who liked to keep an eye on their stations and apparatus.</p>
             <p>The application was developed for both popular phone operating systems, Android and iOS. The user would login to a secure Google Firebase Cloud database, and would be sent alerts from dispatch via our database interface application, written in Java.</p>
           </section>
-          <section>
+          <section class="project-info">
             <h3>CAD API</h3>
             <p>Most CAD vendors used an API to connect to the Mach Alert System, but some required us to interface to them. One such project required us to work remotely with a subcontractor to develop the application. We used Agile principles and Jira during this development. This project was done in C#.</p>
           </section>
