--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -18,8 +18,9 @@
           <h1>Christopher Atchison</h1>
           <h2>Software Engineer</h2>
           </div>
-      </header>
+      </header> <!-- End of header block. -->
 
+      <!--*******************  Navigation  **********************************-->
       <div class="flex-nav">
         <div class=flex-nav-item id="homeBtn">Home</div>
         <div class=flex-nav-item id="eduBtn">Education</div>
@@ -27,7 +28,7 @@
         <div class=flex-nav-item id="workBtn">Employment</div>
         <div class=flex-nav-item id="projBtn">Projects</div>
         <a href="#contact" class=flex-nav-item>Contact</a>
-      </div>
+      </div> <!-- End of Navigation block. -->
 
       <!--*******************  Summary  *************************************-->
       <section class="summary" id=summary>
@@ -35,7 +36,7 @@
           <h2>Summary</h2>
           <p>Experienced Software Engineer with a demonstrated history of working in the Enterprise Software field. Skilled in Java, C/C#, Android and iOS Development as well as HTML/CSS/Javascript. Strong engineering professional with a Bachelor of Science in Computer Science from University of South Florida. </p>
       </div>
-      </section>
+      </section> <!-- End of Summary block. -->
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education" id=edu>
         <div class="content-wrap">
@@ -70,13 +71,12 @@
               <div class=flex-soft-item>Javascript</div>
             </div>
           </section>
-          <p><a href="#header">Back to top</a></p>
         </div>
       </section>  <!-- End of Software Experience block. -->
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience" id=work>
-        <div class="content-wrap">
+        <div class="content-wrap divider">
           <h2>Employment History</h2>
           <section>
             <h3>Software Engineer</h3>
@@ -99,13 +99,12 @@
                 <li>Collaborated remotely with subcontractors to delegate coding jobs that were later combined into a single application</li>
               </ul>
           </section>
-          <p><a href="#header">Back to top</a></p>
         </div>
       </section> <!-- End of Job block. -->
 
       <!-- ******************  Projects ****************** -->
       <section class="projects" id=proj>
-        <div class="content-wrap">
+        <div class="content-wrap divider">
           <h2>Projects</h2>
           <section class="project-info">
             <h3>Seminole County Ozone System</h3>
@@ -131,7 +130,6 @@
             <h3>CAD API</h3>
             <p>Most CAD vendors used an API to connect to the Mach Alert System, but some required us to interface to them. One such project required us to work remotely with a subcontractor to develop the application. We used Agile principles and Jira during this development. This project was done in C#.</p>
           </section>
-          <p><a href="#header">Back to top</a></p>
         </div>
       </section> <!-- End of Projects block. -->
 
@@ -142,7 +140,7 @@
             <a href="mailto:catchiso@gmail.com">catchiso@gmail.com</a>
             <a href="https://www.linkedin.com/in/catchiso/" target="_blank">LinkedIn</a>
         </div>
-      </footer>
+      </footer> <!-- End of footer block. -->
     </main>
   </body>
 </html>
