--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -24,7 +24,7 @@
       <div class="flex-nav">
         <div class=flex-nav-item id="homeBtn">Home</div>
         <div class=flex-nav-item id="eduBtn">Education</div>
-        <div class=flex-nav-item id="softBtn">Software Experience</div>
+        <div class=flex-nav-item id="softBtn">Software&#10;Experience</div>
         <div class=flex-nav-item id="workBtn">Employment</div>
         <div class=flex-nav-item id="projBtn">Projects</div>
         <a href="#contact" class=flex-nav-item>Contact</a>
