--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -118,13 +118,13 @@
           <h2>Projects</h2>
           <section class="project-info">
             <h3>Seminole County Ozone System</h3>
-            <img id="water-plant" src="images/markham.jpg" alt="Water Plant">
+            <img id="water-plant" src="/images/markham.jpg" alt="Water Plant">
             <p>Using ladder-logic and Motorola Programmable Logic Controllers (PLC), I developed the operational code for the Southeast Regional water treatment plant in Seminole County, FL. In addition to the ozone system, it also has granular activated carbon filters, sodium hypochlorite, and sodium hydroxide. I implemented these systems using specifications from the engineering team.</p>
             <p>Their graphical user interface uses Wonderware’s Archestra. It was designed to display the status of all the equipment, allow operators to make adjustments, and notify personnel of alarms in the system, i.e. High Water Pressure.</p>
           </section>
           <section class="project-info">
             <h3>Mach Alert Fire Station Alerting product</h3>
-            <img id="fsa" src="images/firestation.jpg" alt="Fire Station">
+            <img id="fsa" src="/images/firestation.jpg" alt="Fire Station">
             <p>This product is enterprise-level software, mission-critical, and completely redundant. It uses a customer provided IP network, and the Motorola Radio system, to connect to Station Controller panels at every fire station. From dispatch, where the GUI resides, our system integrated seamlessly with existing Computer Aided Dispatch (CAD) systems to automatically alert each station in the call. There was also a Manual Alerting page as an emergency backup.</p>
             <p>In addition to maintaining and updating the current product, our development team was tasked with in-house simulators, used for testing and demonstrations at trade shows. These software pieces were predominantly written in Java, with some instances of C# if necessary.</p>
             <p>Custom development requests were common. We always integrated these customer features into the existing system, allowing all future customers to benefit, without costing the development team additional time and resources. We used Trihedral’s VTScada software, which was a natural progression from our work in Water Treatment facilities.</p>
@@ -134,7 +134,7 @@
             <p>From feedback and requests, through the years we developed ancillary products that integrated with our system, from mapping and alerts displayed on wall-mounted televisions, to dynamic lighting systems that used color codes to convey alert type. Other upgrades improved safety systems, such as turning off stoves, or conveniences like opening bay doors during an alert.</p>
           </section>
           <section class="project-info">
-            <img id="phoneapp" src="images/googlemaps.jpg" alt="Fire Station">
+            <img id="phoneapp" src="/images/googlemaps.jpg" alt="Fire Station">
             <h3>Phone Applications</h3>
             <p>Phone applications were by far our most requested feature. It was used by volunteers who might not be in the station, or battalion chiefs who liked to keep an eye on their stations and apparatus.</p>
             <p>The application was developed for both popular phone operating systems, Android and iOS. The user would login to a secure Google Firebase Cloud database, and would be sent alerts from dispatch via our database interface application, written in Java.</p>
