--- a/colors-game/index.html
+++ b/colors-game/index.html
@@ -18,7 +18,8 @@
         <h3 class="answer2">Answer 2</h3>
         <h3 class="answer3">Answer 3</h3>
     </section>
-    <div>
+
+    <div class="switch_div">
         <!-- Rounded switch -->
         <span class="span_label">Spanish</span>
         <label class="switch">
@@ -27,6 +28,17 @@
         </label>
         <span class="eng_label">English</span>
     </div>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img src="images/approved-151676_640.png" alt="Check Mark">
+            <h3>Congratulations! You got it!</h3>
+        </div>
+    </div>
+
 </body>
 
 </html>
