--- a/colors-game/index.html
+++ b/colors-game/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <span class="question">What color is this?</span>
+        <span class="color-circle"></span>
     </header>
     <section class="answers">
         <h3 class="answer1">Answer 1</h3>
