--- a/colors-game/index.html
+++ b/colors-game/index.html
@@ -7,6 +7,7 @@
     <title>Colors Game</title>
     <script src="scripts/scripts.js" defer></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
