--- a/math-game/index.html
+++ b/math-game/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1 class="question">What is ?</h1>
+        <button id="gear">&#9881</button>
     </header>
 
     <section class="answers-container">
@@ -30,7 +31,7 @@
         </div>
         <div class="maxOpVal-container">
             <label for="maxOpVal">Max Operand Value</label>
-            <input type="number" id="maxOpVal" value="20" max="99"/>
+            <input type="number" id="maxOpVal" value="12" max="99" min="10"/>
         </div>
     </section>
     
