Updated content, removed old projects

--- a/css-portfolio/index.html
+++ b/css-portfolio/index.html
@@ -26,7 +26,7 @@
         <div class=flex-nav-item id="eduBtn">Education</div>
         <div class=flex-nav-item id="softBtn">Software&#10;Experience</div>
         <div class=flex-nav-item id="workBtn">Employment</div>
-        <div class=flex-nav-item id="projBtn">Projects</div>
+        <!--<div class=flex-nav-item id="projBtn">Projects</div>-->
         <a href="#contact" class=flex-nav-item>Contact</a>
       </div> <!-- End of Navigation block. -->
 
@@ -34,9 +34,18 @@
       <section class="summary" id=summary>
       <div class="content-wrap">
           <h2>Summary</h2>
-          <p>Experienced Software Engineer with a demonstrated history of working in the Enterprise Software field. Skilled in Java, C/C#, Android and iOS Development as well as HTML/CSS/Javascript. Strong engineering professional with a Bachelor of Science in Computer Science from University of South Florida. </p>
+          <p>As a professional Software Engineer since 2011, I have <i>never stopped learning.</i></p>
+          <p>Starting out in the industrial automation industry, I programmed microprocessors to run Water, Wastewater, and Ozone filtration plants for local municipalities.</p>
+          <p>I helped create the MACH Alert Fire Station Alerting product that helps dispatchers all over the USA and Canada react to emergencies and mobilize required resources as quickly as possible.</p>
+          <p>I learned the value of service-oriented architecture, receiving training in XML/XSLT, and maintaining SOAP web services that connected disparate operations for the City of Lakeland.</p>
+          <p>I developed front end applications to allow business users to run automated ETL processes and create the reports they needed to perform their best.</p>
+          <p>I designed asynchronous RESTful web services, integrating internal applications with third-party services like USPS, Salesforce, NetSuite, Tableau, Experian, and OneTrust.</p>
+          <p>I implemented an in-house email alert application to replace WebFocus, saving company funds by removing an expensive subscription.</p>
+          <p>I performed Data Engineering duties, managing the Snowflake Cloud platform and receiving a SnowPro Core Certification.</p>
+          <p>Throughout my experience, the ability to quickly injest new technologies and apply them, while also paying heed to the mistakes of the past, has been pivotal to my success. I rarely get to rely on my previous knowledge entirely. There is always something new that drives my curiousity and creative instincts. In the end, software is my vehicle for creation, and my motivation has always been to build applications that I can feel proud of.</p>
       </div>
       </section> <!-- End of Summary block. -->
+
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education" id=edu>
         <div class="content-wrap">
@@ -45,30 +54,70 @@
             <h3>University of South Florida - Tampa</h3>
             <p>Bachelor of Science, <i>cum laude</i>, in Computer Science</p>
           </section>
+          <br>
+          <h2>Certifications</h2>
+          <section>
+            <h3>Snowflake SnowPro Core</h3>
+            <p>Certificate ID: 
+              <a href="https://achieve.snowflake.com/f873ea05-01b5-4240-9570-5a28384311c4#acc.1f6oxFtJ" target="_blank">S85977-250311-COF
+              </a>
+            </p>
+          </section>
         </div>
       </section> <!-- End of School block. -->
 
       <!-- ********************  SOFTWARE EXPERIENCE  ********************* -->
       <section class="software-experience" id=soft>
         <div class="content-wrap">
-        <h2 class="soft-title">Software Experience</h2>
+        <h2 class="soft-title">Technical Skills</h2>
           <section>
+            <h3>Front End</h3>
             <div class="flex-soft">
+              <div class=flex-soft-item>ASP.NET</div>
+              <div class=flex-soft-item>HTML</div>
+              <div class=flex-soft-item>CSS</div>
+              <div class=flex-soft-item>Javascript</div>
+              <div class=flex-soft-item>Bootstrap</div>
+              <div class=flex-soft-item>jQuery</div>
+              <div class=flex-soft-item>AJAX</div>
+            </div>
+            <h3>Back End</h3>
+            <div class="flex-soft">
+              <div class=flex-soft-item>C#</div>
               <div class=flex-soft-item>Java</div>
               <div class=flex-soft-item>C</div>
-              <div class=flex-soft-item>C#</div>
+              <div class=flex-soft-item>.NET Core/Framework</div>
+              <div class=flex-soft-item>SQL Server Integration Services</div>
+              <div class=flex-soft-item>SOAP/RESTful APIs</div>
+              <div class=flex-soft-item>JSON/XML/XSLT/WSDL</div>
+            </div>
+            <h3>Database</h3>
+            <div class="flex-soft">
+              <div class=flex-soft-item>SQL (MS/Oracle/IBM)</div>
+              <div class=flex-soft-item>NoSQL (MongoDB/Firebase)</div>
+              <div class=flex-soft-item>Snowflake Cloud</div>
+            </div>
+            <h3>Tools</h3>
+            <div class="flex-soft">
+              <div class=flex-soft-item>Visual Studio</div>
+              <div class=flex-soft-item>VS Code</div>
+              <div class=flex-soft-item>Microsoft IIS</div>
+              <div class=flex-soft-item>SQL Server Management Studio</div>
               <div class=flex-soft-item>Netbeans</div>
               <div class=flex-soft-item>Eclipse</div>
-              <div class=flex-soft-item>Visual Studio</div>
               <div class=flex-soft-item>Android Studio</div>
               <div class=flex-soft-item>XCode</div>
               <div class=flex-soft-item>Windows</div>
               <div class=flex-soft-item>Linux</div>
               <div class=flex-soft-item>Google Firebase</div>
               <div class=flex-soft-item>Microsoft Office</div>
-              <div class=flex-soft-item>HTML</div>
-              <div class=flex-soft-item>CSS</div>
-              <div class=flex-soft-item>Javascript</div>
+            </div>
+            <h3>General</h3>
+            <div class="flex-soft">
+              <div class=flex-soft-item>Source Control (Git/TFS)</div>
+              <div class=flex-soft-item>Azure DevOps (CI/CD, YAML)</div>
+              <div class=flex-soft-item>Unit Testing (MSTest/Moq)</div>
+              <div class=flex-soft-item>Agile (Jira/Kanban)</div>
             </div>
           </section>
         </div>
@@ -78,73 +127,63 @@
       <section class="work-experience" id=work>
         <div class="content-wrap divider">
           <h2>Employment History</h2>
+
+          <section>
+            <h3>Data Integration Developer</h3>
+            <p class="company">Winston Brands, Inc.</p>
+            <p class="date">April 2022 - July 2025</p>
+            <ul>
+              <li>Achieved Snowflake SnowPro Core Certification, becoming the Administrator and Organization Owner for Snowflake Cloud Databases/Integrations</li>
+              <li>Designed custom email alert integrations using Microsoft SQL Server Integration Services (SSIS) to replace existing WebFocus alerts, reducing third-party overhead costs</li>
+              <li>Created the custom return label web service in .NET Core that integrated existing website and warehouse applications with third-party shipping APIs, allowing them to request return labels from a variety of shipping partners</li>
+              <li>Wrote automated unit tests for web services resulting in over 90% code coverage</li>
+              <li>Implemented CI/CD processes using Azure DevOps via YAML pipelines to build, unit test, validate adequate code coverage, and deploy .NET Web Services/SSIS packages to multiple load-balanced servers, with no downtime</li>
+              <li>Redesigned/Refactored existing applications, drastically reducing runtimes and hardware utilization</li>
+            </ul>
+          </section>
+
+          <section>
+            <h3>Applications Developer III</h3>
+            <p class="company">USF Foundation</p>
+            <p class="date">Jan 2022 - April 2022</p>
+            <ul>
+              <li>Updated older VB.NET Web Applications to new customer specifications</li>
+              <li>Performed project management duties including gathering requirements, creating detailed task lists, estimating project milestones, etc.</li>
+              <li>Scripted automated processes using SSIS and SQL Server Agent Jobs</li>
+              <li>Mentored Junior Applications Developers</li>
+            </ul>
+          </section>
+
           <section>
             <h3>Programmer II</h3>
-            <p class="company">City of Lakeland, IT</p>
-            <p class="date">2019 - Present</p>
+            <p class="company">City of Lakeland</p>
+            <p class="date">Dec 2019 - Jan 2022</p>
             <ul>
-              <li>Developed in Oracle's Service Oriented Architecture (SOA), as well as Maximo 7</li>
-              <li>Used web technologies like Javascript, HTML, CSS, XML, XSLT, WSDL, as well as SOAP  and RESTful APIs</li>
+              <li>Developed software integrations using Microsoft SQL Server Integration Services and Oracle Service-Oriented Architecture (SOA)</li>
+              <li>Wrote Web Server applications using C# .NET</li>
+              <li>Created web applications using technologies like Javascript, CSS, HTML, XML, JSON, XSLT, WSDL, SOAP and RESTful APIs
+              </li>
             </ul>
           </section>
 
           <section>
-            <h3>Software Engineer</h3>
-            <p class="company">Mach Alert, Inc.</p>
-            <p class="date">2018 - 2019</p>
-            <ul>
-              <li>Mach Alert Division was acquired from DCR Engineering Services, Inc.</li>
-            </ul>
-          </section>
-
-          <section>
-              <h3>Programmer I/Software Engineer</h3>
-              <p class="company">DCR Engineering Services, Inc.</p>
-              <p class="date">2011 - 2018</p>
+              <h3>Software Engineer</h3>
+              <p class="company">Mach Alert, Inc./DCR Engineering Services, Inc.*</p>
+              <p class="date">2011 - 2019</p>
               <ul>
-                <li>Worked as part of the core development team for the Mach Alert Fire Station Alerting product, using Waterfall and Agile development principles to maintain a consistent release</li>
-                <li>Developed supplemental phone applications for both Android and iOS phones, utilizing Google’s Firebase cloud technology</li>
-                <li>Investigated various hardware and software pieces as potential replacements for current technology, including ARM processors and Linux distributions</li>
-                <li>Designed, developed, and tested C# and Java applications used for simulation and demonstrating the Mach Alert Software, as well as implementing custom API to interface with third party software</li>
-                <li>Collaborated remotely with subcontractors to delegate coding jobs that were later combined into a single application</li>
+                <li>Assisted in the creation of the Mach Alert Fire Station Alerting system, using industrial automation tools to connect Emergency Dispatchers to Fire Stations using Computer Aided Dispatch systems.</li>
+                <li>Developed Java applications used for incident display products as well as customer demonstrations.</li>
+                <li>Created the original Mach Alert mobile app, for Android (Java) and iOS (Objective C)</li>
+                <li>Automated water/wastewater plants, including the Seminole County Ozone System, using Motorola ACE3600 Programmable Logic Controllers (PLCs) and Wonderware Archestra.</li>
+                <li>Front end: VTScada scripting (front-end tag system from industrial automation) and Java</li>
+                <li>Back end: VTScada, Motorola ACE3600 PLCs for true back end functions.</li>
+                <li>Cloud: Google Firebase/MongoDB for mobile applications</li>
+                <li>Documentation: Architecture Diagrams, Object Models, Interface Control Documents, Flow Charts, Test Plans, Requirements Gathering, etc.</li>
+                <li><i>*DCR Engineering Services FSA Division was acquired by Mach Alert, Inc. in 2018.</i></li>
               </ul>
           </section>
         </div>
       </section> <!-- End of Job block. -->
-
-      <!-- ******************  Projects ****************** -->
-      <section class="projects" id=proj>
-        <div class="content-wrap divider">
-          <h2>Projects</h2>
-          <section class="project-info">
-            <h3>Seminole County Ozone System</h3>
-            <img id="water-plant" src="images/markham.jpg" alt="Water Plant">
-            <p>Using ladder-logic and Motorola Programmable Logic Controllers (PLC), I developed the operational code for the Southeast Regional water treatment plant in Seminole County, FL. In addition to the ozone system, it also has granular activated carbon filters, sodium hypochlorite, and sodium hydroxide. I implemented these systems using specifications from the engineering team.</p>
-            <p>Their graphical user interface uses Wonderware’s Archestra. It was designed to display the status of all the equipment, allow operators to make adjustments, and notify personnel of alarms in the system, i.e. High Water Pressure.</p>
-          </section>
-          <section class="project-info">
-            <h3>Mach Alert Fire Station Alerting product</h3>
-            <img id="fsa" src="images/firestation.jpg" alt="Fire Station">
-            <p>This product is enterprise-level software, mission-critical, and completely redundant. It uses a customer provided IP network, and the Motorola Radio system, to connect to Station Controller panels at every fire station. From dispatch, where the GUI resides, our system integrated seamlessly with existing Computer Aided Dispatch (CAD) systems to automatically alert each station in the call. There was also a Manual Alerting page as an emergency backup.</p>
-            <p>In addition to maintaining and updating the current product, our development team was tasked with in-house simulators, used for testing and demonstrations at trade shows. These software pieces were predominantly written in Java, with some instances of C# if necessary.</p>
-            <p>Custom development requests were common. We always integrated these customer features into the existing system, allowing all future customers to benefit, without costing the development team additional time and resources. We used Trihedral’s VTScada software, which was a natural progression from our work in Water Treatment facilities.</p>
-          </section>
-          <section class="project-info">
-            <h3>Product Development</h3>
-            <p>From feedback and requests, through the years we developed ancillary products that integrated with our system, from mapping and alerts displayed on wall-mounted televisions, to dynamic lighting systems that used color codes to convey alert type. Other upgrades improved safety systems, such as turning off stoves, or conveniences like opening bay doors during an alert.</p>
-          </section>
-          <section class="project-info">
-            <img id="phoneapp" src="images/googlemaps.jpg" alt="Phone App">
-            <h3>Phone Applications</h3>
-            <p>Phone applications were by far our most requested feature. It was used by volunteers who might not be in the station, or battalion chiefs who liked to keep an eye on their stations and apparatus.</p>
-            <p>The application was developed for both popular phone operating systems, Android and iOS. The user would login to a secure Google Firebase Cloud database, and would be sent alerts from dispatch via our database interface application, written in Java.</p>
-          </section>
-          <section class="project-info">
-            <h3>CAD API</h3>
-            <p>Most CAD vendors used an API to connect to the Mach Alert System, but some required us to interface to them. One such project required us to work remotely with a subcontractor to develop the application. We used Agile principles and Jira during this development. This project was done in C#.</p>
-          </section>
-        </div>
-      </section> <!-- End of Projects block. -->
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
